--- a/index.html
+++ b/index.html
@@ -941,11 +941,20 @@ console.log = console.info = console.debug = console.warn = console.error = cons
   </div>
 </div>
 
+<img
+  src="./images/LogoTransparent1.PNG?v=3"
+  alt="Rung's Thai Kitchen Logo"
+  class="brand-logo"
+  width="520" height="260"
+  onerror="this.onerror=null; this.src='./images/logo_fallback.png';"
+/>
+
+
     <!-- Header -->
     <header class="site-header">
   <div class="header-inner centered">
     <div class="brand-block" style="margin-top: 1px">
-      <img src="images/LogoTransparent1.PNG" alt="Rung's Thai Kitchen Logo" class="brand-logo">
+      <img src="images/LogoTransparent1.PNG?v=3" alt="Rung's Thai Kitchen Logo" class="brand-logo">
       <!--<div class="brand-title">Rung's Thai Kitchen</div>-->
       <div class="brand-title">Authentic Thai Takeaway</div>
     </div>
