--- a/index.html
+++ b/index.html
@@ -923,6 +923,65 @@ console.log = console.info = console.debug = console.warn = console.error = cons
   margin-bottom: 200px !important; /* adjust this value as needed */
 }
 
+/* Glass look for major cards */
+.card,
+.content-section {
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+/* Checkout modal + sheet */
+.modal,
+#checkout-modal .modal,
+#order-success .modal {
+  background-color: rgba(255, 255, 255, 0.92);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+}
+
+/* Footer glass + spacing */
+footer {
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 12px;
+  padding: 18px;
+}
+
+/* Extra breathing room below the header */
+.site-header { margin-bottom: 40px; }
+
+/* Keep price column aligned in order summary on all sizes */
+.order-row {
+  align-items: start;
+}
+.order-row .price {
+  margin-left: auto;
+  text-align: right;
+  min-width: 4.5ch;
+}
+
+/* Hide thumbnails in order summary */
+.order-row img,
+.order-item img,
+.menu-item img {
+  display: none !important;
+}
+
+/* Adjust padding/margins to reclaim space */
+.order-row,
+.order-item {
+  grid-template-columns: 1fr auto;
+  align-items: center;
+  padding: 8px 0;
+}
+
+.order-row .meta,
+.order-item .meta {
+  margin-left: 0 !important;
+}
+
 
   </style>
 </head>
