--- a/index.html
+++ b/index.html
@@ -825,6 +825,32 @@ console.log = console.info = console.debug = console.warn = console.error = cons
     margin-top: 6px;
   }
 }
+
+/* Subtle dividers between order items */
+.order-row:not(:last-child),
+.order-item:not(:last-child) {
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.15);
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+/* Optional: lighter feel for dark backgrounds */
+body.dark-mode .order-row:not(:last-child),
+body.dark-mode .order-item:not(:last-child) {
+  border-bottom-color: rgba(255, 255, 255, 0.25);
+}
+/* Space before totals and checkout button */
+.order-summary-totals,
+#checkout-button {
+  margin-top: 1rem;
+}
+.order-row:hover,
+.order-item:hover {
+  background: rgba(255,255,255,0.4);
+  border-radius: 8px;
+  transition: background 0.2s ease;
+}
+
 /* --- Center-align informational cards --- 
 .about-section,
 .food-section,
