--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,17 @@ footer a:hover {
   overflow: hidden;
 }
 
+/* tighten the space under the header */
+.site-header { margin-bottom: 8px; padding-bottom: 10px; }
+
+/* make sure the spacer doesn't reserve space unless sliding */
+#header-spacer { height: 0 !important; }
+
+/* no accidental top margin on the very first content card */
+main > section:first-of-type .card { margin-top: 0; }
+
+/* (optional) if you still see a gap, remove top margin on the first section entirely */
+main > section:first-of-type { margin-top: 0; }
 
 
 
@@ -1195,6 +1206,11 @@ footer a:hover {
 			<p class="muted"> My culinary journey began with a passion for traditional Thai recipes handed down through generations. I believe that the secret to great Thai cuisine lies in using fresh, high-quality ingredients and a careful balance of flavours. Each dish is crafted with love and dedication, ensuring that you experience the vibrant and aromatic taste of Thailand in every bite.</p>
 			<p class="muted">Whether you're craving a comforting curry or a refreshing salad, I've got you covered.
           </p>
+		  <div class="food-grid about-grid">
+      <img src="images/pestlemortar.jpg" alt="Traditional cooking tools" loading="lazy">
+      <img src="images/stirfry.jpg" alt="Traditional cooking methods" loading="lazy">
+      <img src="images/stickyrice.jpg" alt="Traditional food!" loading="lazy">
+    </div>
         </div>
 		<!--</div>-->
 
@@ -1202,7 +1218,7 @@ footer a:hover {
         <!--<div class="card-spacer">-->
 		<div class="card" id="our-food" style="margin-top:8px">
           <h2>Our Food</h2>
-          <div style="display:flex;gap:18px;align-items:flex-start;flex-wrap:wrap">
+          <div style="display:flex;gap:1px;align-items:flex-start;flex-wrap:wrap">
             <div style="flex:1 1 320px;min-width:240px">
               <p class="muted">
                 At Rung's Thai Kitchen we use fresh, locally sourced ingredients and traditional Thai techniques.
@@ -1534,7 +1550,8 @@ footer a:hover {
         { id: 'fish-cakes', name: 'Thai Fish Cakes', desc: 'Flavourful, bite-sized fritters with a blend of savoury, spicy, and tangy flavours.', price: 5.00, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','egg','soya'] },
         { id: 'porkprawn-dumplings', name: 'Pork & Prawn Steamed Dumplings', desc: 'Steamed dumplings filled with a savoury combination of tender pork and juicy prawns.', price: 4.50, allergens: ['gluten','shellfish'] },
         { id: 'fried-prawns', name: 'Deep Fried Tiger Prawns (x4)', desc: 'Tiger Prawns cooked in a crispy tempura batter served with authentic Thai sweet Chilli Sauce.', price: 6.00, allergens: ['shellfish','gluten','egg'] },
-        { id: 'thai-sausage', name: 'Thai Pork Sausage', desc: 'A traditional fermented Thai sausage made with ground pork, sticky rice, and fragrant seasonings. Served with fresh sliced ginger, whole peanuts and slices of cucumber.', price: 5.00, allergens: [] }
+        { id: 'thai-sausage', name: 'Thai Pork Sausage', desc: 'A traditional fermented Thai sausage made with ground pork, sticky rice, and fragrant seasonings. Served with fresh sliced ginger, whole peanuts and slices of cucumber.', price: 5.00, allergens: [] },
+		{ id: 'spare-ribs', name: 'Thai Spare Ribs (Sii Khrong Moo Yang)', desc: 'Tender ribs with a sweet, salty and savoury flavour. Served with a sticky carmelised glaze.', price: 7.50, allergens: ['sesame'] }
       ]},
       { id: 'soup', title: 'Soup', items: [
         { id: 'tom-yum', name: 'Tom Yum Soup 🌶️🌶️', desc: 'A vibrant and aromatic Thai classic featuring a hot and sour clear broth infused with lemongrass, galangal, and kaffir lime leaves.', price: 6.50, allowedModifiers: ['chicken','prawn','tofu','vegetable'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 2, allergens: ['fish','soya'] },
