--- a/index.html
+++ b/index.html
@@ -1115,6 +1115,36 @@ main > section:first-of-type .card { margin-top: 0; }
 /* (optional) if you still see a gap, remove top margin on the first section entirely */
 main > section:first-of-type { margin-top: 0; }
 
+/* --- Back to Top Button --- */
+#backToTop {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  background: #16205b;             /* same deep blue as your footer */
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 46px;
+  height: 46px;
+  font-size: 22px;
+  font-weight: bold;
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
+  z-index: 9999;
+}
+
+#backToTop:hover {
+  background: #e63946;             /* your accent red */
+  transform: scale(1.1);
+}
+
+/* when visible */
+#backToTop.show {
+  opacity: 0.9;
+  visibility: visible;
+}
 
 
   </style>
@@ -1541,38 +1571,38 @@ main > section:first-of-type { margin-top: 0; }
     // ---------- Data ----------
     const MENU_CATEGORIES = [
       { id: 'starters', title: 'Starter', items: [
-        { id: 'veg-spring-rolls', name: 'Vegetable Spring Rolls (x4)', desc: 'Crispy, deep-fried rolls filled with a savoury mixture of glass noodles and vegetables, served with a sweet chilli sauce.', price: 4.50, allergens: ['gluten'] },
-        { id: 'chicken-satay', name: 'Chicken Satay', desc: 'Tender chicken pieces marinated in a fragrant blend of turmeric, lemongrass, and spices. Served with a peanut sauce.', price: 5.00, allergens: ['peanuts','soya','sesame'] },
-        { id: 'prawn-crackers', name: 'Prawn Crackers', desc: 'A light and crispy snack made from tapioca flour, shrimp, and seasonings. Served with sweet chilli sauce.', price: 2.50, allergens: ['shellfish','gluten'] },
-        { id: 'moo-ping', name: 'Pork Skewer (Moo Ping)', desc: 'Thai grilled pork skewers marinated in a sweet and savoury sauce.', price: 5.00, allergens: [] },
-        { id: 'chicken-spring-rolls', name: 'Chicken Spring Rolls (x4)', desc: 'Crispy, deep-fried rolls filled with a savoury mixture of meat, glass noodles, and vegetables, served with a sweet chilli sauce.', price: 5.00, allergens: ['gluten'] },
-        { id: 'fried-tofu', name: 'Deep Fried Tofu', desc: 'Crispy Thai Fried Tofu with a sweet-spicy Thai peanut sauce!', price: 3.50, allergens: ['soya','peanuts','sesame'] },
-        { id: 'fish-cakes', name: 'Thai Fish Cakes', desc: 'Flavourful, bite-sized fritters with a blend of savoury, spicy, and tangy flavours.', price: 5.00, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','egg','soya'] },
-        { id: 'porkprawn-dumplings', name: 'Pork & Prawn Steamed Dumplings', desc: 'Steamed dumplings filled with a savoury combination of tender pork and juicy prawns.', price: 4.50, allergens: ['gluten','shellfish'] },
-        { id: 'fried-prawns', name: 'Deep Fried Tiger Prawns (x4)', desc: 'Tiger Prawns cooked in a crispy tempura batter served with authentic Thai sweet Chilli Sauce.', price: 6.00, allergens: ['shellfish','gluten','egg'] },
-        { id: 'thai-sausage', name: 'Thai Pork Sausage', desc: 'A traditional fermented Thai sausage made with ground pork, sticky rice, and fragrant seasonings. Served with fresh sliced ginger, whole peanuts and slices of cucumber.', price: 5.00, allergens: [] },
-		{ id: 'spare-ribs', name: 'Thai Spare Ribs (Sii Khrong Moo Yang)', desc: 'Tender ribs with a sweet, salty and savoury flavour. Served with a sticky carmelised glaze.', price: 7.50, allergens: ['sesame'] }
+        { id: 'veg-spring-rolls', name: 'Vegetable Spring Rolls (x4)', desc: 'Crispy, deep-fried rolls filled with a savoury mixture of glass noodles and vegetables, served with a sweet chilli sauce.', price: 4.50, img: 'images/SpringRoll.jpg',  allergens: ['gluten'] },
+        { id: 'chicken-satay', name: 'Chicken Satay', desc: 'Tender chicken pieces marinated in a fragrant blend of turmeric, lemongrass, and spices. Served with a peanut sauce.', price: 5.00, img: 'images/Satay.jpg', allergens: ['peanuts','soya','sesame'] },
+        { id: 'prawn-crackers', name: 'Prawn Crackers', desc: 'A light and crispy snack made from tapioca flour, shrimp, and seasonings. Served with sweet chilli sauce.', price: 2.50, img: 'images/PrawnCrackers.jpg', allergens: ['shellfish','gluten'] },
+        { id: 'moo-ping', name: 'Pork Skewer (Moo Ping)', desc: 'Thai grilled pork skewers marinated in a sweet and savoury sauce.', price: 5.00, img: 'images/mooping.jpg', allergens: [] },
+        { id: 'chicken-spring-rolls', name: 'Chicken Spring Rolls (x4)', desc: 'Crispy, deep-fried rolls filled with a savoury mixture of meat, glass noodles, and vegetables, served with a sweet chilli sauce.', price: 5.00, img: 'images/SpringRoll.jpg',  allergens: ['gluten'] },
+        { id: 'fried-tofu', name: 'Deep Fried Tofu', desc: 'Crispy Thai Fried Tofu with a sweet-spicy Thai peanut sauce!', price: 3.50, img: 'images/DeepFriedTofu.jpg', allergens: ['soya','peanuts','sesame'] },
+        { id: 'fish-cakes', name: 'Thai Fish Cakes', desc: 'Flavourful, bite-sized fritters with a blend of savoury, spicy, and tangy flavours.', price: 5.00, img: 'images/thaifishcakesjpg.jpg',spiceEnabled: true, spiceDefault: 1, allergens: ['fish','egg','soya'] },
+        { id: 'porkprawn-dumplings', name: 'Pork & Prawn Steamed Dumplings', desc: 'Steamed dumplings filled with a savoury combination of tender pork and juicy prawns.', price: 4.50, img: 'images/dumplings.jpg', allergens: ['gluten','shellfish'] },
+        { id: 'fried-prawns', name: 'Deep Fried Tiger Prawns (x4)', desc: 'Tiger Prawns cooked in a crispy tempura batter served with authentic Thai sweet Chilli Sauce.', price: 6.00, img: 'images/Prawns.jpg',  allergens: ['shellfish','gluten','egg'] },
+        { id: 'thai-sausage', name: 'Thai Pork Sausage', desc: 'A traditional fermented Thai sausage made with ground pork, sticky rice, and fragrant seasonings. Served with fresh sliced ginger, whole peanuts and slices of cucumber.', price: 5.00, img: 'images/sausage.jpg', allergens: [] },
+		{ id: 'spare-ribs', name: 'Thai Spare Ribs (Sii Khrong Moo Yang)', desc: 'Tender ribs with a sweet, salty and savoury flavour. Served with a sticky carmelised glaze.', price: 7.50, img: 'images/spareribs.jpg', allergens: ['sesame'] }
       ]},
       { id: 'soup', title: 'Soup', items: [
-        { id: 'tom-yum', name: 'Tom Yum Soup 🌶️🌶️', desc: 'A vibrant and aromatic Thai classic featuring a hot and sour clear broth infused with lemongrass, galangal, and kaffir lime leaves.', price: 6.50, allowedModifiers: ['chicken','prawn','tofu','vegetable'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 2, allergens: ['fish','soya'] },
-        { id: 'tom-kha', name: 'Tom Kha🌶️', desc: 'A creamy and aromatic Thai coconut soup featuring fragrant galangal, lemongrass, and kaffir lime leaves.', price: 5.50, allowedModifiers: ['chicken','prawn','tofu','vegetable'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','dairy'] },
-        { id: 'dumpling-broth', name: 'Chicken Steamed Dumplings Broth (Gaew Naam)', desc: 'A savoury and flavourful broth with fragrant chicken-stuffed wontons.', price: 5.50, allergens: ['gluten','egg','soya'] }
+        { id: 'tom-yum', name: 'Tom Yum Soup 🌶️🌶️', desc: 'A vibrant and aromatic Thai classic featuring a hot and sour clear broth infused with lemongrass, galangal, and kaffir lime leaves.', price: 6.50, img: 'images/TomYum.jpg', allowedModifiers: ['chicken','prawn','tofu','vegetable'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 2, allergens: ['fish','soya'] },
+        { id: 'tom-kha', name: 'Tom Kha🌶️', desc: 'A creamy and aromatic Thai coconut soup featuring fragrant galangal, lemongrass, and kaffir lime leaves.', price: 5.50, img: 'images/TomKha.jpg', allowedModifiers: ['chicken','prawn','tofu','vegetable'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','dairy'] },
+        { id: 'dumpling-broth', name: 'Chicken Steamed Dumplings Broth (Gaew Naam)', desc: 'A savoury and flavourful broth with fragrant chicken-stuffed wontons.', price: 5.50, img: 'images/GaewNam.jpg', allergens: ['gluten','egg','soya'] }
       ]},
       { id: 'salad', title: 'Salad', items: [
-        { id: 'papaya-salad', name: 'Green Papaya Salad (Som Tam)🌶️🌶️🌶️', desc: 'A spicy, savoury, and sweet Thai salad made primarily of shredded green papaya.', price: 7.00, spiceEnabled: true, spiceDefault: 3, allergens: ['peanuts','fish','soya'] },
-        { id: 'beef-salad', name: 'Spicy Beef Salad (Yum Nuea)🌶️🌶️', desc: 'A classic Thai salad with juicy grilled steak, tossed with crisp vegetables, fresh mint, coriander, and a tangy lime-fish sauce dressing.', price: 9.00, spiceEnabled: true, spiceDefault: 2, allergens: ['fish','soya'] },
-        { id: 'pork-salad', name: 'Grilled Pork Salad (Nam Tok)🌶️', desc: 'This classic North-eastern Thai salad features smoky, charred grilled pork slices tossed with a fiery dressing of lime, fish sauce, and chili flakes.', price: 8.50, spiceEnabled: true, spiceDefault: 1, allergens: ['fish'] },
-        { id: 'laab', name: 'Laab🌶️🌶️', desc: 'A vibrant and flavourful meat salad known for its harmony of spicy, sour, salty, and savoury flavours.', price: 8.00, spiceEnabled: true, spiceDefault: 2, allergens: ['fish'] }
+        { id: 'papaya-salad', name: 'Green Papaya Salad (Som Tam)🌶️🌶️🌶️', desc: 'A spicy, savoury, and sweet Thai salad made primarily of shredded green papaya.', price: 7.00, img: 'images/somtam.jpg', spiceEnabled: true, spiceDefault: 3, allergens: ['peanuts','fish','soya'] },
+        { id: 'beef-salad', name: 'Spicy Beef Salad (Yum Nuea)🌶️🌶️', desc: 'A classic Thai salad with juicy grilled steak, tossed with crisp vegetables, fresh mint, coriander, and a tangy lime-fish sauce dressing.', price: 9.00, img: 'images/ymbeef.jpg', spiceEnabled: true, spiceDefault: 2, allergens: ['fish','soya'] },
+        { id: 'pork-salad', name: 'Grilled Pork Salad (Nam Tok)🌶️', desc: 'This classic North-eastern Thai salad features smoky, charred grilled pork slices tossed with a fiery dressing of lime, fish sauce, and chili flakes.', price: 8.50, img: 'images/porksalad.jpg', spiceEnabled: true, spiceDefault: 1, allergens: ['fish'] },
+        { id: 'laab', name: 'Laab🌶️🌶️', desc: 'A vibrant and flavourful meat salad known for its harmony of spicy, sour, salty, and savoury flavours.', price: 8.00, img: 'images/Larb.jpg', spiceEnabled: true, spiceDefault: 2, allergens: ['fish'] }
       ]},
       { id: 'curry', title: 'Curry', items: [
-        { id: 'rung-curry', name: 'Chefs Special Rainbow Curry🌶️', desc: 'Chef Rungs special curry. Rich and mildly spiced curry, this is a real crowd pleaser!', price: 9.50, allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','soya'] },
+        { id: 'rung-curry', name: 'Chefs Special Rainbow Curry🌶️', desc: 'Chef Rungs special curry. Rich and mildly spiced curry, this is a real crowd pleaser!', price: 9.50, img: 'images/rainbowcurry.jpg',  allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','soya'] },
         { id: 'green-curry', name: 'Green Curry🌶️🌶️', desc: 'A vibrant green curry sauce with creamy coconut milk, peppers, courgette,green beans and fresh Thai basil.', price: 9.50, allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2, img: 'images/greencurry.jpg', spiceEnabled: true, spiceDefault: 2, allergens: ['fish','soya'] },
-        { id: 'red-curry', name: 'Red Curry🌶️', desc: 'A medium-spiced, savoury, and creamy Thai dish featuring a rich red chili-based paste in coconut milk.', price: 9.50, allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','soya'] },
-        { id: 'massaman-curry', name: 'Massaman Curry', desc: 'Made with a unique blend of spices like cinnamon and cardamom, combined with coconut milk, potatoes, and peanuts.', price: 9.50, allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2,spiceEnabled: true, spiceDefault: 0, allergens: ['peanuts','fish','soya'] },
-        { id: 'panang-curry', name: 'Panang Curry🌶️', desc: 'Flavored with a fragrant curry paste that includes lemongrass, galangal, and kaffir lime leaves, this is a rich and creamy curry!', price: 9.50, allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2,spiceEnabled: true, spiceDefault: 1, allergens: ['fish','soya'] }
+        { id: 'red-curry', name: 'Red Curry🌶️', desc: 'A medium-spiced, savoury, and creamy Thai dish featuring a rich red chili-based paste in coconut milk.', price: 9.50, img: 'images/redcurry.jpg',  allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','soya'] },
+        { id: 'massaman-curry', name: 'Massaman Curry', desc: 'Made with a unique blend of spices like cinnamon and cardamom, combined with coconut milk, potatoes, and peanuts.', price: 9.50, img: 'images/massaman.jpg',  allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2,spiceEnabled: true, spiceDefault: 0, allergens: ['peanuts','fish','soya'] },
+        { id: 'panang-curry', name: 'Paneng Curry🌶️', desc: 'Flavored with a fragrant curry paste that includes lemongrass, galangal, and kaffir lime leaves, this is a rich and creamy curry!', price: 9.50, img: 'images/paneng.jpg', allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2,spiceEnabled: true, spiceDefault: 1, allergens: ['fish','soya'] }
       ]},
       { id: 'stir-fry', title: 'Stir Fry', items: [
-        { id: 'stir-basil', name: 'Stir Fried Chilli & Basil (Pad Kra Pao)🌶️🌶️', desc: 'Street food classic, its a spicy, savoury Thai stir-fry of usually minced meat with garlic, chilies, and holy basil, typically served over rice and often topped with a fried egg.', price: 8.50, allowedModifiers: ['chicken','beef','pork','tofu','vegetable','prawn','fried-egg' ], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 2, allergens: ['soya'] },
+        { id: 'stir-basil', name: 'Stir Fried Chilli & Basil (Pad Kra Pao)🌶️🌶️', desc: 'Street food classic, its a spicy, savoury Thai stir-fry of usually minced meat with garlic, chilies, and holy basil, typically served over rice and often topped with a fried egg.', price: 8.50, img: 'images/Kaprow.jpeg', allowedModifiers: ['chicken','beef','pork','tofu','vegetable','prawn','fried-egg' ], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 2, allergens: ['soya'] },
         { id: 'stir-ginger', name: 'Stir Fried Ginger (Pad Khing)🌶️', desc: 'A stir-fried dish flavoured with fresh ginger, spring onions, onions, mushrooms and chilli.', price: 8.50, allowedModifiers: ['chicken','beef','pork','tofu','vegetable','prawn' ], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 1, allergens: ['soya'] },
         { id: 'stir-cashew', name: 'Stir Fried Cashew Nuts', desc: 'A vibrant and flavorful stir-fry featuring crisp vegetables tossed in a savoury sauce. Finished with the rich, buttery crunch of toasted cashew nuts', price: 8.50, allowedModifiers: ['batter-chicken','tofu' ], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 1, allergens: ['tree_nuts','soya','sesame'] },
         { id: 'stir-sweetsour', name: 'Sweet & Sour (Pad Priew Wan)', desc: 'Thai sweet and sour stir-fry dish featuring vegetables such as cucumber, tomatoes, onions, and bell peppers in a tangy, sweet, and savoury sauce.', price: 8.50, allowedModifiers: ['batter-chicken','tofu' ], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 0, allergens: ['soya'] },
@@ -1588,9 +1618,9 @@ main > section:first-of-type { margin-top: 0; }
         { id: 'fried-rice', name: 'Thai Special Fried Rice (Khao Pad)', desc: 'A classic Thai street food staple. Fragrant jasmine rice wok-fried with egg, onions, and tomatoes, seasoned with fish sauce, soy sauce, and oyster sauce.', price: 7.50, allowedModifiers: ['chicken','tofu','pork','beef','vegetable','prawn'], modifierRequired: true, modifierMax: 2, spiceEnabled: true, spiceDefault: 0, allergens: ['egg','soya'] }
       ]},
       { id: 'sides', title: 'Side Dishes', items: [
-        { id: 'jasmine-rice', name: 'Jasmine Rice (Khao Suay)', desc: 'Fragrant, long-grain rice.', price: 2.00, allergens: [] },
+        { id: 'jasmine-rice', name: 'Jasmine Rice (Khao Suay)', desc: 'Fragrant, long-grain rice.', price: 2.00, img: 'images/rice.jpg', allergens: [] },
         { id: 'egg-rice', name: 'Egg Fried Rice (Khao Pad Khai)', desc: 'Rice with egg, simple & comforting.', price: 2.50, allergens: ['egg','soya'] },
-        { id: 'sticky-rice', name: 'Sticky Rice (Khao Neow)', desc: 'Perfect sticky jasmine rice.', price: 2.50, allergens: [] },
+        { id: 'sticky-rice', name: 'Sticky Rice (Khao Neow)', desc: 'Perfect sticky jasmine rice.', price: 2.50, img: 'images/stickyrice.jpg', allergens: [] },
         { id: 'coconut-ricee', name: 'Coconut Rice (Khao Man)', desc: 'Jasmine rice simmered in coconut milk.', price: 3.00, allergens: ['dairy'] },
 		 { id: 'chips', name: 'Chips', desc: 'Deep fried chips. Because sometimes you just need them!', price: 3.00, allergens: ['dairy'] },
 		 { id: 'fried-egg', name: 'Fried egg', desc: 'Thai style fried eggs have crispy whites with a soft yolk. But please let us kmow how you like yours', price: 3.00, allergens: ['dairy'] }
@@ -1598,14 +1628,14 @@ main > section:first-of-type { margin-top: 0; }
     ];
 
     const MODIFIERS = [
-      { id: 'chicken', name: 'Chicken', delta: 0.00 },
+      { id: 'chicken', name: 'Chicken', delta: 0.50 },
       { id: 'beef', name: 'Beef', delta: 1.00 },
-      { id: 'pork', name: 'Pork', delta: 0.75 },
-      { id: 'tofu', name: 'Tofu', delta: 0.00 },
+      { id: 'pork', name: 'Pork', delta: 1.00 },
+      { id: 'tofu', name: 'Tofu', delta: 0.50 },
       { id: 'prawn', name: 'Prawn', delta: 1.50 },
       { id: 'vegetable', name: 'Vegetable', delta: 0.00 },
       { id: 'fried-egg', name: 'Fried Egg', delta: 1.00 },
-      { id: 'batter-chicken', name: 'Battered Chicken', delta: 1.00 }
+      { id: 'batter-chicken', name: 'Battered Chicken', delta: 1.50 }
     ];
 
     // ---------- State ----------
@@ -3488,7 +3518,29 @@ window.downloadReceiptPlain = function (summary, items, preferredTimeStr) {
     next.remove();
   }
 })();
+
+// --- Back to Top Button Logic ---
+const backToTopBtn = document.getElementById('backToTop');
+
+window.addEventListener('scroll', () => {
+  if (window.scrollY > 400) { // show after scrolling down a bit
+    backToTopBtn.classList.add('show');
+  } else {
+    backToTopBtn.classList.remove('show');
+  }
+});
+
+backToTopBtn.addEventListener('click', () => {
+  window.scrollTo({
+    top: 0,
+    behavior: 'smooth'
+  });
+});
+
 </script>
+<!-- Back to Top Button -->
+<button id="backToTop" title="Go to top">↑</button>
+
 
 </body>
 </html>
