Fixing issue with background
Background impact not displaying in live version

--- a/index.html
+++ b/index.html
@@ -1494,7 +1494,7 @@ footer {
 <header class="site-header">
   <div class="header-inner centered">
     <div class="brand-block" style="margin-top: 1px">
-      <img src="images/logotransparent2.png?v=2"
+      <img src="images/logotransparent2.png"
            alt="Rung's Thai Kitchen Logo"
            class="brand-logo">
       <div class="brand-title">Authentic Thai Takeaway</div>
@@ -4302,3 +4302,4 @@ if (lightboxEl) {
 
 </body>
 </html>
+
