--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ footer {
 		  overflow: hidden;
 		  background:
 			/* top image */
-			url("./images/bg-top6.JPG") center top / cover no-repeat,
+			url("./images/bg-top6.jpg") center top / cover no-repeat,
 			/* bottom image */
 			url("images/bg-bottom.jpg") center 120vh / cover no-repeat,
 			/* fallback colour under both */
