--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ html { scroll-padding-top: calc(var(--header-offset, 0px) + var(--ticker-height,
 #status-ticker .ticker-inner {
   display: inline-block;
   white-space: nowrap;
-  animation: ticker-move 25s linear infinite;
+  animation: ticker-move 25s linear infinite; animation-delay: 2s;
 }
 
 @keyframes ticker-move {
@@ -4315,4 +4315,3 @@ if (lightboxEl) {
 
 </body>
 </html>
-
