--- a/index.html
+++ b/index.html
@@ -1432,27 +1432,24 @@ footer {
   }
 }
 
-/* Floating "Menu" button */
+/* Make the floating menu button a full-width bottom bar */
 .menu-fab {
-  position: fixed;        /* <- this is the important part */
-  right: 16px;
-  bottom: 24px;
-  z-index: 1600;
-  padding: 10px 10px;
-  border-radius: 10%;
-  border: none;
-  background: linear-gradient(135deg, #16205B 0%, #b02a2a 100%);
+  position: fixed;
+  left: 0;               /* stretch from left to right */
+  right: 0;
+  bottom: 0;             /* sit across the bottom edge */
+  width: 100%;
+  height: 56px;          /* adjust to taste */
+  border-radius: 0;      /* remove circle shape */
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  background: #d9464a;
   color: #fff;
-  font-weight: 600;
-  height: 56px;
-  width: 56px;
-  margin: auto;
-  box-shadow: 0 4px 10px rgba(0,0,0,.25);
-  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
-  cursor: pointer;
-
-  /* optional little transition */
-  transition: transform 0.15s ease, box-shadow 0.15s ease;
+  font-size: 1.2rem;
+  box-shadow: 0 -2px 10px rgba(0,0,0,.25);
 }
 
 .menu-fab:hover {
@@ -1868,7 +1865,7 @@ footer {
 			</button>
 		  </div>
 		</div>
-		<button id="menu-fab" class="menu-fab" type="button" aria-label="Open menu">Menu</button>
+		<button id="menu-fab" class="menu-fab" type="button" aria-label="Open menu">View Menu & Place Order</button>
 		<button id="menu-fab" class="menu-fab hidden" type="button" aria-label="Open menu">Menu</button>
 
   <script>
