--- a/index.html
+++ b/index.html
@@ -1587,7 +1587,7 @@ footer {
           <h2 style="margin-bottom:10px">Allergens & Ingredients</h2>
           <p class="muted">
             We take food allergies seriously. Many of our dishes can be prepared without certain allergens — please
-            mention any allergies when placing your order. The icons below indicate dishes that contain:
+            mention any allergies when placing your order. The icons below indicate that dishes contain:
           </p>
           <div style="margin-top:10px;display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:10px;line-height:1.5">
             <div><span class="allergen-icon">🥜</span> Peanuts</div>
@@ -1691,10 +1691,10 @@ footer {
       </div>
 	  
 	  <!-- Add EXTRAS section (paid add-ons) -->
-<!--<div id="extras-wrap" style="margin-top:12px; display:none">
+	<div id="extras-wrap" style="margin-top:12px; display:none">
   <div class="small">Add extras (priced per dish)</div>
   <div id="extras" class="mods"></div>
-</div>-->
+</div>
 
 
       <div id="modal-allergens-wrap" style="margin-top:10px;display:none">
