--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@ footer {
 		}
 
 		#backToTop:hover {
-		  background: #e63946;             /* your accent red */
+		  background: #16205B;             /* your accent red */
 		  transform: scale(1.1);
 		}
 
@@ -1435,10 +1435,10 @@ footer {
 /* Make the floating menu button a full-width bottom bar */
 .menu-fab {
   position: fixed;
-  left: 0;               /* stretch from left to right */
+  left: 122px;               /* stretch from left to right */
   right: 0;
   bottom: 0;             /* sit across the bottom edge */
-  width: 100%;
+  width: 81%;
   height: 56px;          /* adjust to taste */
   border-radius: 0;      /* remove circle shape */
   padding: 0;
@@ -1462,6 +1462,14 @@ footer {
 	pointer-events: none;
 	transform: translateY(8px);
 	}
+
+.social-links .icon {
+  width: 16px !important;
+  height: 16px !important;
+  fill: currentColor;
+  opacity: 0.85;
+  flex-shrink: 0;
+}
 
 
 		  </style>
@@ -1627,21 +1635,52 @@ footer {
       </aside>
     </main>
 
-   <footer id="contact">
+<footer id="contact">
   <div class="footer-inner">
-    <div class="footer-section">
-      <h3>Contact Us</h3>
-      <p class="muted">
-        📞 <a href="tel:01133447431">0113 3447431</a> &nbsp; • &nbsp;
-        ✉️ <a href="mailto:hello@rungsthaikitchen.co.uk">hello@rungsthaikitchen.co.uk</a>
-      </p>
 
-      <h3>Opening Hours</h3>
-      <p class="muted">🕒 Wed–Sun: 17:00 – 21:00</p>
+    <!-- Contact + Social Section -->
+    <div class="footer-section">
+
+      <!-- Contact row all on ONE line -->
+      <div class="footer-contact-row">
+        <!--<h3>Contact Us</h3>-->
+        <p class="contact-inline muted">
+          Contact Us: 📞 <a href="tel:01133447431">0113 3447431</a>
+          <span class="dot">•</span>
+          ✉️ <a href="mailto:hello@rungsthaikitchen.co.uk">hello@rungsthaikitchen.co.uk</a>
+        </p>
+      </div>
+
+      <!-- Opening Hours -->
+      <!--<h3>Opening Hours</h3>-->
+      <p class="muted">Opening Hours: 🕒 Wed–Sun: 17:00 – 21:00</p>
+
+      <!-- New Social Media Section -->
+      <!--<h3>Social Media</h3>-->
+<p class="muted social-links">
+  Social Media: <a href="https://www.facebook.com/RungsThaiKitchenLeeds" target="_blank" class="social-icon">
+    <svg viewBox="0 0 24 24" class="icon">
+      <path d="M22 12c0-5.522-4.477-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987H7.898v-2.89h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.242 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.987C18.343 21.128 22 16.991 22 12z"/>
+    </svg>
+    Facebook
+  </a>
+
+  <span class="dot">•</span>
+
+  <a href="https://www.instagram.com/RungThaiKitchen" target="_blank" class="social-icon">
+    <svg viewBox="0 0 24 24" class="icon">
+      <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3h10zm-5 3a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-.75a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5z"/>
+    </svg>
+    Instagram
+  </a>
+</p>
+
+
     </div>
 
     <div class="footer-divider"></div>
 
+    <!-- Legal -->
     <div class="footer-legal">
       <div class="footer-copy">
         © <span id="year"></span> Rung’s Thai Kitchen. All rights reserved.
@@ -1652,8 +1691,10 @@ footer {
         <a href="cookiepolicy.html" target="_blank" rel="noopener">Cookie Policy</a>
       </nav>
     </div>
+
   </div>
 </footer>
+
 
 
 
