--- a/index.html
+++ b/index.html
@@ -1465,8 +1465,8 @@ footer {
 	}
 
 .social-links .icon {
-  width: 18px !important;
-  height: 18px !important;
+  width: 22px !important;
+  height: 22px !important;
   fill: currentColor;
   opacity: 0.85;
   flex-shrink: 0;
@@ -1546,6 +1546,35 @@ footer#contact .footer-inner {
 
   background: rgba(176, 42, 42, 0.5); /* your existing footer red */
   border-radius: 22px;
+}
+/* Custom branded map marker */
+.brand-marker {
+  background: transparent;
+  border: none;
+}
+
+.brand-marker-inner {
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  background: linear-gradient(135deg, #16205B 0%, #b02a2a 100%);
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
+  position: relative;
+}
+
+/* Little "pin" point under the circle */
+.brand-marker-inner::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -6px;
+  transform: translateX(-50%);
+  width: 8px;
+  height: 8px;
+  background: #b02a2a;
+  border-radius: 50%;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.7);
 }
 
 
@@ -3209,41 +3238,48 @@ window.nameWithoutChillies= nameWithoutChillies;
 
 // end DOMContentLoaded
 
+<script>
+document.addEventListener('DOMContentLoaded', function () {
 
+  // Coordinates for your address
+  var lat = 53.744437;
+  var lng = -1.576570;
 
-  document.addEventListener('DOMContentLoaded', function () {
-    // Approximate coordinates for your address – you can refine these
-    var lat = 53.744437;   // replace with more precise coords if you like
-    var lng = -1.576570
+  // Create the map with closer zoom
+  var map = L.map('delivery-map').setView([lat, lng], 15);
 
-    // Create the map
-    var map = L.map('delivery-map').setView([lat, lng], 15);
+  // 🌙 Night-mode / dark map tiles
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+    maxZoom: 19,
+    attribution: '&copy; OpenStreetMap contributors &copy; CARTO'
+  }).addTo(map);
 
-    // Background tiles (OpenStreetMap)
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
-
-    // Marker at your address
-    L.marker([lat, lng]).addTo(map)
-      .bindPopup("Rung's Thai Kitchen<br>30 Topcliffe Mews<br>Morley, LS27 8UL")
-      .openPopup();
-
-    // 3 mile delivery radius (in metres)
-    var radiusMeters = 3 * 1609.34;
-
-   // 3-mile delivery radius (in metres)
-var radiusMeters = 3 * 1609.34;
-
-L.circle([lat, lng], {
-  radius: radiusMeters,
-  color: '#b02a2a',
-  fillColor: '#b02a2a',
-  fillOpacity: 0.20,
-  weight: 2
-}).addTo(map);
+  // 🌶️ Custom branded marker using a DivIcon
+  var brandIcon = L.divIcon({
+    className: 'brand-marker',
+    html: '<div class="brand-marker-inner"></div>',
+    iconSize: [26, 32],   // width, height (includes little "pin")
+    iconAnchor: [13, 32], // bottom center
+    popupAnchor: [0, -30] // popup above marker
   });
+
+  L.marker([lat, lng], { icon: brandIcon }).addTo(map)
+    .bindPopup("Rung's Thai Kitchen<br>30 Topcliffe Mews<br>Morley, LS27 8UL")
+    .openPopup();
+
+  // 🟠 3-mile delivery radius
+  var radiusMeters = 3 * 1609.34;
+
+  L.circle([lat, lng], {
+    radius: radiusMeters,
+    color: '#ffb347',        // warm accent for dark map
+    fillColor: '#ffb347',
+    fillOpacity: 0.18,
+    weight: 2
+  }).addTo(map);
+});
+</script>
+
 
 
 </script>
